res/examples/valid/let_decl_with_existing_type_alias_in_closed_scope.eg
{
    type A = number;
};

let A = 123;